Issue#SH-366 Certificate manage page - UI Design(Changes in alignment and Re-issue certificate html created)

--- a/src/app/client/src/app/modules/dashboard/components/course-dashboard/course-dashboard.component.scss
+++ b/src/app/client/src/app/modules/dashboard/components/course-dashboard/course-dashboard.component.scss
@@ -36,13 +36,18 @@ div.content {
   }
 
   .batch-card-number {
-    font-size: 2.5rem;
+    font-size: calculateRem(36px);
+    font-weight: bold;
+  }
+
+  .batch-card-total-number {
+    font-size: calculateRem(72px);
     font-weight: bold;
   }
 }
 
 .completion-content{
-  min-height: 15.2875rem;
+  min-height: calculateRem(231px);
 }
 
 ::ng-deep {
