--- a/src/app/client/src/app/modules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.scss
+++ b/src/app/client/src/app/modules/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.scss
@@ -47,7 +47,7 @@
       padding-left: 0;
     }
   
-    .sidebar a {
+    .sidebar a ,.dashboard-title{
       text-align: center;
       float: none;
     }
